counter-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
  namespace: staging
  annotations: 
        checkov.io/skip1: CKV_K8S_8
        checkov.io/skip2: CKV_K8S_9
  labels:
    app: counter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      # automountServiceAccountToken: false
      # securityContext:
      #   # seccompProfile:
      #       # type: RuntimeDefault
      #   runAsNonRoot: true
      #   # runAsUser: 10014
      containers:
      - name: counter-pod
        image: public.ecr.aws/r9u2q4e0/my-static-website:latest
        # image: public.ecr.aws/aws-containers/stateful-counter@sha256:a510ee229219c1a162e3619301b724587e3f480e4fd52d3b4e03af4af2ac9ac8
        # securityContext:
          # allowPrivilegeEscalation: false
          # runAsNonRoot: true
          # runAsUser: 10014
          # capabilities:
            # drop:
            # - ALL
          # readOnlyRootFilesystem: true
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "16Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
