counter-app/manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: staging
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
   - port: 5432
  selector:
   app: postgres
