counter-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-service
  namespace: staging
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: counter
