counter-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: alb  
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: $TLS_CERT_ARN
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                serviceName: ssl-redirect
                servicePort: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service:
                serviceName: istio-ingressgateway
                servicePort: 443
          - path: /healthz/ready
            pathType: Prefix
            backend:
              service:
                serviceName: istio-ingressgateway
