counter-app/manifests/virtualservice.yaml
#Allow to configure sidecar proxies and interact with services in the mesh, routes to services like an ingress
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService 
metadata:
  name: counter-virtualservice
  namespace: staging
spec:
  hosts:
  - "*"
  gateways:
  - counter-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: counter-app-service
        port:
          number: 80
