counter-app/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: counter
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: counter-network-policy
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: counter
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: counter
    ports:
    - port: 80
      protocol: TCP
